# SIEngine

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  README.md
cmake/: CheckCompiler.cmake  CompileOptions.cmake  IncludeEngineSources.cmake  LinkLibraries.cmake
game/: GameApplication.cpp
header/: camera.hpp  gameObject.hpp  rectangle.hpp  shader.hpp  window.hpp
libraries/glad/src/: glad.c
libraries/glm/: CMakeLists.txt
resources/models/planet/saturn2/: planet.mtl
resources/shaders/: LFS.txt  LVS.txt  fragment.txt  fs.txt  light.frag  lightFS.fs  lightFS.txt  objectFS.fs  objectFS.txt  vertex.txt  vs.txt
src/: SIEngine.h  main.cpp
src/Engine/: Engine.cpp  Engine.h  IGame.h
src/Engine/Core/: ConfigurationEngine.h
src/Game/: Game.h
src/SIEngine/: Application.cpp  Application.h  Core.h  EntryPoint.h
src/SIEngine/Application/: Configuration.cpp  Configuration.h
src/SIEngine/Components/: Camera.cpp  Camera.h  Scene.h  Window.cpp  Window.h
src/SIEngine/Configs/: ShadersPaths.h
src/SIEngine/GraphicsAPI/OpenGL/: Shader.cpp  Shader.h  Texture.cpp  Texture.h
src/SIEngine/Tools/Render/: Render.cpp  Render.h  Shaders.h
src/graphics/: GameObject.cpp  GameObject.h  Light.cpp  Light.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  Rectangle.cpp  Rectangle.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h
src/lighting/: DirectionLight.cpp  DirectionLight.h  Light.cpp  Light.h  PointLight.cpp  PointLight.h  SpotLight.cpp  SpotLight.h
src/loaders/: png_loading.cpp  png_loading.h
src/window/: Camera.cpp  Camera.h  Events.cpp  Events.h  FPSCounter.cpp  FPSCounter.h  Window.cpp  Window.h
